# kaggle_openai_amazon

./: .gitignore  README.md  pyproject.toml
src/: main.py  z_agent.py
src/test/: test_detect_site_in_image.py
src/utils/: constant.py  data_class.py  model_clients.py  prompts.py  tools.py  topic_type.py  yolo_predict.py
